gtk2_dir = join_paths(theme_dir, 'gtk-2.0')

# static theme files to copy
gtk2_theme_data_sources = [
  'gtkrc',
  'main.rc',
  'apps.rc',
  'hacks.rc',
]

gtk2_asset_dir = join_paths(gtk2_dir, 'assets')

# static asset files to copy
gtk2_asset_data_sources = [
  'assets/border.png',
  'assets/button-active.png',
  'assets/button-hover.png',
  'assets/button-insensitive.png',
  'assets/button.png',
  'assets/checkbox-checked-active.png',
  'assets/checkbox-checked-hover.png',
  'assets/checkbox-checked-insensitive.png',
  'assets/checkbox-checked.png',
  'assets/checkbox-mixed-active.png',
  'assets/checkbox-mixed-hover.png',
  'assets/checkbox-mixed-insensitive.png',
  'assets/checkbox-mixed.png',
  'assets/checkbox-unchecked-active.png',
  'assets/checkbox-unchecked-hover.png',
  'assets/checkbox-unchecked-insensitive.png',
  'assets/checkbox-unchecked.png',
  'assets/combo-entry-ltr-button-active.png',
  'assets/combo-entry-ltr-button-hover.png',
  'assets/combo-entry-ltr-button-insensitive.png',
  'assets/combo-entry-ltr-button.png',
  'assets/combo-entry-ltr-entry-active.png',
  'assets/combo-entry-ltr-entry-insensitive.png',
  'assets/combo-entry-ltr-entry.png',
  'assets/combo-entry-rtl-button-active.png',
  'assets/combo-entry-rtl-button-hover.png',
  'assets/combo-entry-rtl-button-insensitive.png',
  'assets/combo-entry-rtl-button.png',
  'assets/combo-entry-rtl-entry-active.png',
  'assets/combo-entry-rtl-entry-insensitive.png',
  'assets/combo-entry-rtl-entry.png',
  'assets/entry-active.png',
  'assets/entry-background-insensitive.png',
  'assets/entry-background.png',
  'assets/entry-insensitive.png',
  'assets/entry.png',
  'assets/focus.png',
  'assets/frame-inline.png',
  'assets/frame-notebook.png',
  'assets/frame.png',
  'assets/handle-horz.png',
  'assets/handle.png',
  'assets/handle-vert.png',
  'assets/line.png',
  'assets/menu-border.png',
  'assets/menu-checkbox-checked-insensitive.png',
  'assets/menu-checkbox-checked.png',
  'assets/menu-checkbox-insensitive.png',
  'assets/menu-checkbox-mixed-insensitive.png',
  'assets/menu-checkbox-mixed.png',
  'assets/menu-checkbox.png',
  'assets/menu-item-active.png',
  'assets/menu-radio-checked-insensitive.png',
  'assets/menu-radio-checked.png',
  'assets/menu-radio-insensitive.png',
  'assets/menu-radio-mixed-insensitive.png',
  'assets/menu-radio-mixed.png',
  'assets/menu-radio.png',
  'assets/notebook-combo-entry-ltr-entry-active.png',
  'assets/notebook-combo-entry-ltr-entry-insensitive.png',
  'assets/notebook-combo-entry-ltr-entry.png',
  'assets/notebook-combo-entry-rtl-entry-active.png',
  'assets/notebook-combo-entry-rtl-entry-insensitive.png',
  'assets/notebook-combo-entry-rtl-entry.png',
  'assets/notebook-entry-active.png',
  'assets/notebook-entry-insensitive.png',
  'assets/notebook-entry.png',
  'assets/pan-down-insensitive.png',
  'assets/pan-down.png',
  'assets/pan-left-insensitive.png',
  'assets/pan-left.png',
  'assets/pan-left-semi.png',
  'assets/pan-right-insensitive.png',
  'assets/pan-right.png',
  'assets/pan-right-semi.png',
  'assets/pan-up-insensitive.png',
  'assets/pan-up.png',
  'assets/progressbar-horz.png',
  'assets/progressbar-trough-horz.png',
  'assets/progressbar-trough-vert.png',
  'assets/progressbar-vert.png',
  'assets/radio-checked-active.png',
  'assets/radio-checked-hover.png',
  'assets/radio-checked-insensitive.png',
  'assets/radio-checked.png',
  'assets/radio-mixed-active.png',
  'assets/radio-mixed-hover.png',
  'assets/radio-mixed-insensitive.png',
  'assets/radio-mixed.png',
  'assets/radio-unchecked-active.png',
  'assets/radio-unchecked-hover.png',
  'assets/radio-unchecked-insensitive.png',
  'assets/radio-unchecked.png',
  'assets/scale-horz-trough-active.png',
  'assets/scale-horz-trough.png',
  'assets/scale-slider-active.png',
  'assets/scale-slider-hover.png',
  'assets/scale-slider-insensitive.png',
  'assets/scale-slider.png',
  'assets/scale-vert-trough-active.png',
  'assets/scale-vert-trough.png',
  'assets/scrollbar-handle-horz.png',
  'assets/scrollbar-handle-vert.png',
  'assets/scrollbar-slider-horz-active.png',
  'assets/scrollbar-slider-horz.png',
  'assets/scrollbar-slider-vert-active.png',
  'assets/scrollbar-slider-vert.png',
  'assets/scrollbar-trough-horz.png',
  'assets/scrollbar-trough-vert.png',
  'assets/spin-down-insensitive.png',
  'assets/spin-down.png',
  'assets/spin-ltr-down-active.png',
  'assets/spin-ltr-down-hover.png',
  'assets/spin-ltr-down-insensitive.png',
  'assets/spin-ltr-down.png',
  'assets/spin-ltr-up-active.png',
  'assets/spin-ltr-up-hover.png',
  'assets/spin-ltr-up-insensitive.png',
  'assets/spin-ltr-up.png',
  'assets/spin-rtl-down-active.png',
  'assets/spin-rtl-down-hover.png',
  'assets/spin-rtl-down-insensitive.png',
  'assets/spin-rtl-down.png',
  'assets/spin-rtl-up-active.png',
  'assets/spin-rtl-up-hover.png',
  'assets/spin-rtl-up-insensitive.png',
  'assets/spin-rtl-up.png',
  'assets/spin-up-insensitive.png',
  'assets/spin-up.png',
  'assets/tab-down-active.png',
  'assets/tab-horz-gap.png',
  'assets/tab-left-active.png',
  'assets/tab-right-active.png',
  'assets/tab-up-active.png',
  'assets/tab-vert-gap.png',
  'assets/transparent-dot.png',
  'assets/treeview-pan-down-active.png',
  'assets/treeview-pan-down-hover.png',
  'assets/treeview-pan-down.png',
  'assets/treeview-pan-up-active.png',
  'assets/treeview-pan-up-hover.png',
  'assets/treeview-pan-up.png',
  'assets/treeview-separator-ltr.png',
  'assets/treeview-separator-rtl.png',
]

# Install theme files
install_data(gtk2_theme_data_sources, install_dir: gtk2_dir)

# Install asset files
install_data(gtk2_asset_data_sources, install_dir: gtk2_asset_dir)
